tests/should_fail/match_expr_type_mismatch_arms.nv
// should_fail: Match expression arms return different types
module match_expr_type_mismatch_arms
fn bad(n: Int) -> Int {
    return match n {
        1 => "one",
        _ => 42
    }
}
